# TAAN-revised

./: .gitignore  README.md  pyproject.toml
configs/: base_config.yaml  qwen3_4b_multitask.yaml  task_types.yaml
scripts/: eval.py  prepare_data.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset_availability.py  multitask_dataset.py  task_sampler.py
src/grpo/: __init__.py  policy_loss.py  rollout.py  trainer.py
src/rewards/: __init__.py  base.py  code_reward.py  math_reward.py  model_reward.py
src/taan/: __init__.py  advantage.py  ema_tracker.py  robust_stats.py  type_registry.py
src/utils/: __init__.py  distributed.py  logging.py
tests/: test_code_eval.py  test_dataset_availability.py  test_ema_tracker.py  test_robust_stats.py  test_taan_advantage.py
